--- a/SquareAreaLib/SquareAreaLib.vcxproj.filters
+++ b/SquareAreaLib/SquareAreaLib.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="SquareArea.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Point.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SquareArea.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
