--- a/SquareAreaTests/SquareAreaTests.vcxproj
+++ b/SquareAreaTests/SquareAreaTests.vcxproj
@@ -61,6 +61,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);"../x64/Debug/SquareAreaLib.lib"</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
